<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/layout_title" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="@dimen/_5sdp">

            <android.support.design.widget.TextInputLayout style="@style/AppThemeTextInputLayout">

                <com.tatx.partnerapp.customviews.CustomEditText
                    android:id="@+id/no_plate"
                    style="@style/AppThemeEditText"
                    android:layout_width="fill_parent"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:hint="@string/no_plate"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout style="@style/AppThemeTextInputLayout">

                <com.tatx.partnerapp.customviews.CustomFloatingLabelEditText
                    android:id="@+id/cet_car_make"
                    style="@style/AppThemeEditText"
                    android:layout_width="fill_parent"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:hint="@string/car_make" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout style="@style/AppThemeTextInputLayout">

                <com.tatx.partnerapp.customviews.CustomFloatingLabelEditText
                    android:id="@+id/cet_car_model"
                    style="@style/AppThemeEditText"
                    android:layout_width="fill_parent"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:hint="@string/car_model" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout style="@style/AppThemeTextInputLayout">

                <com.tatx.partnerapp.customviews.CustomEditText
                    android:id="@+id/registration_no"
                    style="@style/AppThemeEditText"
                    android:layout_width="fill_parent"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:hint="@string/registration_no"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout style="@style/AppThemeTextInputLayout">

                <com.tatx.partnerapp.customviews.CustomEditText
                    android:id="@+id/cet_registration_expiry_date"
                    style="@style/AppThemeEditText"
                    android:layout_width="fill_parent"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:cursorVisible="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/registration_expiry_date"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout style="@style/AppThemeTextInputLayout">

                <com.tatx.partnerapp.customviews.CustomEditText
                    android:id="@+id/et_car_color"
                    style="@style/AppThemeEditText"
                    android:layout_width="fill_parent"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:hint="@string/car_color"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

            <RelativeLayout
                android:id="@+id/rel_select_img"
                android:layout_width="fill_parent"
                android:visibility="gone"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/feedback_form_background">

                <TextView
                    android:id="@+id/tv_select_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:paddingLeft="@dimen/_10sdp"
                    android:text="@string/select_image" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:background="@drawable/gray_background"
                    android:paddingBottom="@dimen/_3sdp"
                    android:paddingLeft="@dimen/_15sdp"
                    android:paddingRight="@dimen/_15sdp"
                    android:paddingTop="@dimen/_3sdp"
                    android:text="@string/choose_file"
                    android:textColor="#000" />

            </RelativeLayout>


            <com.tatx.partnerapp.customviews.CustomRippleView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_15sdp"
                android:layout_marginLeft="@dimen/_45sdp"
                android:layout_marginRight="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_20sdp">

                <Button
                    android:id="@+id/btn_save"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/signin_button_bg"
                    android:text="@string/save"
                    android:textAllCaps="false"
                    android:textColor="@color/buttonColor"
                    android:textSize="@dimen/_15sdp" />

            </com.tatx.partnerapp.customviews.CustomRippleView>

            <TextView
                android:id="@+id/userexists"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="0.50"
                android:textColor="@color/buttonColor" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
