<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/layout_title" />


    <LinearLayout
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_gravity="right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/_15sdp"
        android:gravity="center_vertical"
        >

        <ImageView
            android:layout_width="@dimen/_12sdp"
            android:layout_height="@dimen/_12sdp"
            android:background="@color/dark_purple"
            />

        <com.tatx.partnerapp.customviews.CustomTextView
            android:layout_marginLeft="@dimen/_8sdp"
            style="@style/TextView10"
            android:textAllCaps="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/you"
            />

        <ImageView
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_width="@dimen/_12sdp"
            android:layout_height="@dimen/_12sdp"
            android:background="@color/dark_yellow"
            />

        <com.tatx.partnerapp.customviews.CustomTextView
            style="@style/TextView10"
            android:textAllCaps="false"
            android:layout_marginLeft="@dimen/_8sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/top_performers"

            />

    </LinearLayout>
    <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/bc_grouped_bar_chart"
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_15sdp"
        android:layout_height="0dp"
        android:layout_weight="1" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_12sdp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:background="@drawable/tpg_revenue" />


            <com.tatx.partnerapp.customviews.CustomTextView
                android:layout_width="wrap_content"
                style="@style/TextView10"
                android:textAllCaps="false"
                android:layout_height="match_parent"
                android:text="@string/earnings"
                android:textColor="@color/black"


                />





        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:background="@drawable/tpg_rating" />


            <com.tatx.partnerapp.customviews.CustomTextView
                android:layout_width="wrap_content"
                style="@style/TextView10"
                android:textAllCaps="false"
                android:layout_height="match_parent"
                android:text="@string/rating"
                android:textColor="@color/black"


                />





        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:background="@drawable/tpg_no_of_trips" />


            <com.tatx.partnerapp.customviews.CustomTextView
                android:layout_width="wrap_content"
                style="@style/TextView10"
                android:textAllCaps="false"
                android:layout_height="match_parent"
                android:text="@string/trips_count"
                android:textColor="@color/black"


                />





        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:background="@drawable/tpg_acceptance" />


            <com.tatx.partnerapp.customviews.CustomTextView
                android:layout_width="wrap_content"
                style="@style/TextView10"
                android:textAllCaps="false"
                android:layout_height="match_parent"
                android:text="@string/acceptance"
                android:textColor="@color/black"


                />





        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:background="@drawable/tpg_online" />


            <com.tatx.partnerapp.customviews.CustomTextView
                android:layout_width="wrap_content"
                style="@style/TextView10"
                android:textAllCaps="false"
                android:layout_height="match_parent"
                android:text="@string/online_hrs"
                android:textColor="@color/black"


                />





        </LinearLayout>



    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <LinearLayout
            android:id="@+id/ll_week"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/statusbarcolor"
            android:gravity="center"
            android:padding="@dimen/_10sdp">

            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:background="@drawable/tpg_week" />

            <com.tatx.partnerapp.customviews.CustomTextView
                style="@style/TextView12"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/_10sdp"
                android:text="@string/week"
                android:textColor="@color/white"
                android:textSize="@dimen/_15sdp"
                />
        </LinearLayout>

        <TextView
            android:layout_width="@dimen/_1sdp"
            android:layout_height="match_parent"
            android:background="#c41927" />

        <LinearLayout
            android:id="@+id/ll_all"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/statusbarcolor"
            android:gravity="center"
            android:padding="@dimen/_10sdp">

            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:background="@drawable/tpg_all" />


            <com.tatx.partnerapp.customviews.CustomTextView
                android:layout_width="wrap_content"
                style="@style/TextView12"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/_10sdp"
                android:text="@string/all"
                android:textColor="@color/white"
                android:textSize="@dimen/_15sdp"


                />
        </LinearLayout>


    </LinearLayout>


</LinearLayout>
